fixed search bar z-index

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ body {
   margin-top: 5px;
   justify-content: space-between;
   gap: 20px;
+  z-index: 90;
   flex-direction: column;
   position: absolute;
   background-color: white;
